recursion.logo.lessons.recursion.logo.square.FourSquare.scala.code
def carre() {
  for (i<-0 to 3) {
    avance(100) ; droite(90.) }
}




override def run() {
  carre()
}